<resources>
    <string name="app_name">3D Wave Wallpapers Maker</string>
    <string name="authorization_succeeded">Authorization succeeded!</string>
    <string name="checkPermission_Authorization_succeeded">checkPermission: Authorization succeeded!</string>
    <string name="please_open_the_relevant_permissions_otherwise_the_application_cannot_be_used_normally">Please open the relevant permissions, otherwise the application cannot be used normally!</string>
    <string name="wallpaper_description">asdfghh</string>
    <string name="wallpaper_set_successfully">Wallpaper set successfully</string>
    <string name="delete">Delete</string>
    <string name="are_you_sure_want_to_exit">Are you sure, want to Exit?</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="classification">Classification</string>
    <string name="_3d_interactive">#3D Interactive</string>
    <string name="parallax_3d">#Parallax 3D</string>
    <string name="fire">#Fire</string>
    <string name="parallax_2d">#Parallax 2D</string>
    <string name="love">#Love</string>
    <string name="gallery">Gallery</string>
    <string name="apply">Apply</string>
    <string name="wallpaper">Wallpaper</string>
</resources>