<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.takeoff.celebs.qwer.ExitActivity">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:tag="big"
        app:layout_constraintBottom_toBottomOf="parent" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/exit_need"
        app:layout_constraintTop_toTopOf="parent"
        android:padding="40dp"
        android:elevation="5dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:orientation="vertical">


        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:padding="5dp"
            android:gravity="center"
            android:textStyle="bold"
            android:text="@string/delete" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="5dp"
            android:textSize="16sp"
            android:text="@string/are_you_sure_want_to_exit" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="15dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txt_yes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/apply_need"
                android:layout_weight="1"
                android:textColor="@color/white"
                android:gravity="center"
                android:padding="5dp"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"
                android:textStyle="bold"
                android:text="@string/yes" />

            <TextView
                android:id="@+id/txt_no"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"
                android:background="@drawable/exit_no"
                android:padding="5dp"
                android:textColor="#FF999999"
                android:gravity="center"
                android:text="@string/no" />
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>