<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context="com.takeoff.celebs.qwer.Fication">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:background="@drawable/tab_need"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/fication_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@drawable/back" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="9"
            android:text="@string/classification"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:gravity="center"/>
    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:tag="small"
        app:layout_constraintBottom_toBottomOf="parent" />

    <HorizontalScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        android:id="@+id/fication_hor_tab"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        >
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tab_details"
            android:orientation="horizontal">
            <LinearLayout
                android:layout_width="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_height="wrap_content"
                android:id="@+id/search_detail"
                android:visibility="gone"
                app:layout_constraintTop_toTopOf="parent"
                android:background="@drawable/search_need"
                android:orientation="horizontal">
                <EditText
                    android:id="@+id/search_text"
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="text"
                    />
                <ImageView
                    android:id="@+id/btn_search"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:src="@drawable/search" />
            </LinearLayout>

            <ImageView
                android:id="@+id/search_logo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/search_back"
                android:padding="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:src="@drawable/search" />

            <ImageView
                android:id="@+id/color_picker_logo"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:src="@drawable/color" />
            <LinearLayout
                android:layout_width="wrap_content"
                android:id="@+id/color_picker_detail"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                app:layout_constraintTop_toTopOf="parent"
                android:background="@drawable/search_need"
                android:orientation="horizontal"
                >

                <ImageView
                    android:id="@+id/all_color"
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:src="@drawable/color" />
                <RadioGroup
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:id="@+id/color_group"
                    android:orientation="horizontal">
                    <RadioButton
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:id="@+id/btn_gray"
                        android:layout_marginLeft="10dp"
                        android:background="@drawable/color_gray"
                        android:button="@null"/>

                    <RadioButton
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:id="@+id/btn_pink"
                        android:layout_marginLeft="10dp"
                        android:background="@drawable/color_pink"
                        android:button="@null"/>

                    <RadioButton
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:id="@+id/btn_red"
                        android:layout_marginLeft="10dp"
                        android:background="@drawable/color_red"
                        android:button="@null"/>

                    <RadioButton
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:id="@+id/btn_orange"
                        android:layout_marginLeft="10dp"
                        android:background="@drawable/color_orange"
                        android:button="@null"/>

                    <RadioButton
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:id="@+id/btn_yellow"
                        android:layout_marginLeft="10dp"
                        android:background="@drawable/color_yellow"
                        android:button="@null"/>

                    <RadioButton
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:id="@+id/btn_green"
                        android:layout_marginLeft="10dp"
                        android:background="@drawable/color_green"
                        android:button="@null"/>

                    <RadioButton
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:id="@+id/btn_blue"
                        android:layout_marginLeft="10dp"
                        android:background="@drawable/color_blue"
                        android:button="@null"/>

                    <RadioButton
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:id="@+id/btn_purple"
                        android:layout_marginLeft="10dp"
                        android:background="@drawable/color_purple"
                        android:layout_marginRight="5dp"
                        android:button="@null"/>



                </RadioGroup>
            </LinearLayout>


            <LinearLayout
                android:layout_width="wrap_content"
                android:id="@+id/text_container"
                android:gravity="center"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <RadioGroup
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/set_fragments"
                    android:orientation="horizontal">
                    <RadioButton
                        android:id="@+id/txt_3d"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:layout_marginLeft="10dp"
                        android:background="@drawable/radio_button_selector"
                        android:textSize="14sp"
                        android:padding="10dp"
                        android:button="@null"
                        android:textColor="#FFBBBBBB"
                        android:text="@string/_3d_interactive" />

                    <RadioButton
                        android:id="@+id/txt_parallax"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:background="@drawable/radio_button_selector"
                        android:textSize="14sp"
                        android:padding="10dp"
                        android:button="@null"
                        android:textColor="#FFBBBBBB"
                        android:layout_weight="1"
                        android:text="@string/parallax_3d" />

                    <RadioButton
                        android:id="@+id/txt_fire"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:background="@drawable/radio_button_selector"
                        android:textSize="14sp"
                        android:padding="10dp"
                        android:button="@null"
                        android:textColor="#FFBBBBBB"
                        android:layout_weight="1"
                        android:text="@string/fire" />

                    <RadioButton
                        android:id="@+id/txt_2d"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:background="@drawable/radio_button_selector"
                        android:textSize="14sp"
                        android:button="@null"
                        android:padding="10dp"
                        android:textColor="#FFBBBBBB"
                        android:layout_weight="1"
                        android:text="@string/parallax_2d" />

                    <RadioButton
                        android:id="@+id/txt_love"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:background="@drawable/radio_button_selector"
                        android:textSize="14sp"
                        android:button="@null"
                        android:padding="10dp"
                        android:textColor="#FFBBBBBB"
                        android:layout_weight="1"
                        android:text="@string/love" />
                </RadioGroup>
            </LinearLayout>




        </LinearLayout>

    </HorizontalScrollView>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/fragment_container_view_tag"
        android:layout_marginBottom="5dp"
        android:orientation="vertical">

    </LinearLayout>
</LinearLayout>